# ws-global-chat

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.sqlx/: query-072c1e36d63e5814d4b8b833400f8a04b6c9fce788f76d12d269e52cc5493fce.json  query-1359b3379d10f7121494d05967457e416101e5e8b5bf4f6308a477c1ce021278.json  query-2090904722caf4174e0669ee2ca60d6803bf9b59dfc6760fc04005b7a666ccd0.json  query-2e659899b32224516e111b747140b0cb5a5e2f41e658d8285af91c3bafda7566.json  query-2f48f11fe8a66a3b1159ac91d94faa837652705ec986ee1b1d4bd68c45d301cd.json  query-812bd364b81e3980a85c874406a247ef7be92441c377742319c4ba124fc57291.json  query-927e00c57b2721910a78ba1bfba0ec7ef376b992e62a3b3925e87ea65078d391.json  query-9e9194ddbea67920b837b53fbb9bbbe5ccb706cce41ff1d647f31b8716224987.json  query-b33287a83784dc0eb91b4b5fba896003e81ecbc7935c9f208cca1fe303e320c6.json  query-bf7a5d7042400ccafb9f55b87702bd051c4ab998776dde8288c84ddf7216defe.json  query-c6faace3d2e7166faaaea085da144a8cdf981f1513e24ed65f5be72d8eab0369.json
html5/: error.html  index.html  script.js  style.css
migrations/: 202602031200_create_users_table.sql  20260203180757_create_messages_table_.sql  202602160000_create_sessions_table.sql
nginx/: default.conf
src/: api.rs  db.rs  login.rs  main.rs  routes.rs  ws_handler.rs
src/db/: secrets.rs
src/tables/: user_db.rs
