[package]
name = "chat-global"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true

[dependencies]
warp = {version = "0.4.2", features = ["websocket", "server"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.5"
log = "0.4"
argon2 = "0.5.3"
uuid = { version = "1.0", features = ["v4"] }
cookie = "0.18"